20060902
 - (dtucker) [openbsd-compat/port-irix.c] Add errno.h, found by Iain Morgan.

20060901
 - (djm) [audit-bsm.c audit.c auth-bsdauth.c auth-chall.c auth-pam.c]
   [auth-rsa.c auth-shadow.c auth-sia.c auth1.c auth2-chall.c]
   [auth2-gss.c auth2-kbdint.c auth2-none.c authfd.c authfile.c]
   [cipher-3des1.c cipher-aes.c cipher-bf1.c cipher-ctr.c clientloop.c]
   [dh.c dns.c entropy.c gss-serv-krb5.c gss-serv.c hostfile.c kex.c]
   [kexdhc.c kexdhs.c kexgexc.c kexgexs.c key.c loginrec.c mac.c]
   [md5crypt.c monitor.c monitor_wrap.c readconf.c rsa.c]
   [scard-opensc.c scard.c session.c ssh-add.c ssh-agent.c ssh-dss.c]
   [ssh-keygen.c ssh-keysign.c ssh-rsa.c ssh.c sshconnect.c]
   [sshconnect1.c sshconnect2.c sshd.c]
   [openbsd-compat/bsd-cray.c openbsd-compat/port-aix.c]
   [openbsd-compat/port-linux.c openbsd-compat/port-solaris.c]
   [openbsd-compat/port-uw.c]
   Lots of headers for SCO OSR6, mainly adding stdarg.h for log.h;
   compile problems reported by rac AT tenzing.org
 - (djm) [includes.h monitor.c openbsd-compat/bindresvport.c]
   [openbsd-compat/rresvport.c] Some more headers: netinet/in.h 
   sys/socket.h and unistd.h in various places
 - (dtucker) [openbsd-compat/bsd-cygwin_util.c] Fix implict declaration
   warnings for binary_open and binary_close.  Patch from Corinna Vinschen.
 - (dtucker) [configure.ac includes.h openbsd-compat/glob.{c,h}] Explicitly
   test for GLOB_NOMATCH and use our glob functions if it's not found.
   Stops sftp from segfaulting when attempting to get a nonexistent file on
   Cygwin (previous versions of OpenSSH didn't use the native glob). Partly
   from and tested by Corinna Vinschen.
 - (dtucker) [README contrib/{caldera,redhat,suse}/openssh.spec]  Crank
   versions.

20060831
 - (djm) [CREDITS LICENCE Makefile.in auth.c configure.ac includes.h ]
   [platform.c platform.h sshd.c openbsd-compat/Makefile.in]
   [openbsd-compat/openbsd-compat.h openbsd-compat/port-solaris.c]