@@ -34,6 +34,7 @@
 #include <stddef.h>
 
 #include <netinet/in.h>
+#include <arpa/inet.h>
 
 #ifdef HAVE_SYS_UN_H
 # include <sys/un.h>
