@@ -67,6 +67,9 @@
 #include <string.h>
 #include <unistd.h>
 
+#include <netinet/in.h>
+#include <arpa/inet.h>
+
 #include <openssl/evp.h>
 #include <openssl/err.h>
 
